--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "expo-status-bar": "~1.0.2",
     "install": "^0.13.0",
     "npm": "^6.14.8",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
