--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "install": "^0.13.0",
+    "native-base": "^2.13.14",
     "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
